--- a/index.css
+++ b/index.css
@@ -5,12 +5,12 @@
 }
 
 body {
-    background: linear-gradient(to right, #2c5364, #203a43, #0f2027);
+    background: linear-gradient(to right,#2c5364, #203a43, #0f2027);
 }
 
 .main {
     width: 100%;
-    height: 100%;
+    height: 100vh;
 
     display: flex;
     justify-content: center;
@@ -22,28 +22,18 @@ body {
     height: 40px;
 
     background-color: rgb(231, 231, 231);
+
     border-radius: 50px;
     position: relative;
-    box-shadow: 0px 10px 10px rgba(0, 0, 0, 0.295), inset 0 10px 10px rgba(0, 0, 0, 0.295);;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.295),inset 0 10px 10px rgba(0, 0, 0, 0.295);;
 }
 
 .inputBox input {
     width: 100%;
     height: 100%;
+
     cursor: pointer;
     outline: none;
     -webkit-appearance: none;
     position: absolute;
-}
-
-.inputBox label {
-    font-size: 2.8rem;
-    position: absolute;
-    cursor: pointer;
-    transform: translate(-10px, -12px);
-    transition: transform .4s;
-}
-
-.inputBox input:checked ~ label {
-    transform: translate(50px, -12px);
 }
